<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    android:background="?colorSecondary"
    tools:context=".graphics.GraphicsFragment">


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:accessibilityHeading="true"
                android:fontFamily="sans-serif-black"
                android:text="@string/alternative_texts"
                android:textColor="?colorOnPrimary"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/alt_description"
                android:textColor="?colorOnPrimary"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:accessibilityHeading="true"
                android:fontFamily="sans-serif-black"
                android:text="@string/no_alt_text"
                android:textColor="?colorOnPrimary"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/no_alt_description"
                android:textColor="?colorOnPrimary"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_not_accessible_foreground" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:accessibilityHeading="true"
                android:fontFamily="sans-serif-black"
                android:text="@string/decorative_graphics"
                android:textColor="?colorOnPrimary"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/deco_graphic_description"
                android:textColor="?colorOnPrimary"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@null"
                android:src="@drawable/ic_accessible_foreground" />

            <TextView

                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:accessibilityHeading="true"
                android:fontFamily="sans-serif-black"
                android:text="@string/informative_graphic"
                android:textColor="?colorOnPrimary"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/informative_graphic_description"
                android:textColor="?colorOnPrimary"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:contentDescription="@string/informative_graphic_alt"
                android:src="@drawable/ic_accessible_foreground" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</FrameLayout>