<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    android:background="?colorSecondary"
    tools:context=".focusvisible.FocusVisibleFragment">


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:accessibilityHeading="true"
                android:fontFamily="sans-serif-black"
                android:text="@string/focus_visible"
                android:textColor="?colorOnPrimary"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_Description1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/description1_focus_visible"
                android:textColor="?colorOnPrimary"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/text_Description2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="50dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/description2_focus_visible"
                android:textColor="?colorOnPrimary"
                android:textSize="16sp" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/bt_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/green"
                    android:textColor="@color/white"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="4dp"
                    android:text="@string/focus_visible_btn_1" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/bt_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/green"
                    android:textColor="@color/white"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="4dp"
                    android:text="@string/focus_visible_btn_2"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/bt_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/green"
                    android:textColor="@color/white"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="4dp"
                    android:text="@string/focus_visible_btn_3" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/bt_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_selector"
                    android:textColor="@color/white"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="4dp"
                    android:text="@string/focus_visible_btn_4"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/bt_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_selector"
                    android:textColor="@color/white"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="4dp"
                    android:text="@string/focus_visible_btn_5"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/bt_6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_selector"
                    android:textColor="@color/white"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="4dp"
                    android:text="@string/focus_visible_btn_6"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</FrameLayout>